MediaQueryList instances do not update for `prefers-reduced-motion` https://bugs.webkit.org/show_bug.cgi?id=169835 <rdar://problem/30339378>

Reviewed by Anders Carlsson.

Source/WebCore:

Tell the document it needs to evaluate the MediaQueryLists
if accessibility settings change.

Test: fast/media/mq-prefers-reduced-motion-matchMedia.html

* page/Page.cpp:
(WebCore::Page::accessibilitySettingsDidChange):

LayoutTests:

* fast/media/mq-prefers-reduced-motion-matchMedia-expected.txt: Added.
* fast/media/mq-prefers-reduced-motion-matchMedia.html: Added.

Canonical link: https://commits.webkit.org/186789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214129 268f45cc-cd09-0410-ab3c-d52691b4dbfc